...
            {SAMPLE}
          </AdaptiveText>
        </Frame>

        <View style={styles.controls}>
          <Slider
            testID="FontSizeSlider"
            label="Font size"
            unit="px"
            value={fontSize}
            min={12}
            max={36}
            onChange={setFontSize}
...
